add image styles

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,42 @@
 body {
 	background-image: url(field-of-grass.jpg);
 }
+#barn{
+
+}
+#cow {
+
+}
+#pig {
+
+}
+#chicken {
+
+}
+#rooster {
+
+}
+#goat {
+
+}
+#sheep {
+
+}
+#horse {
+
+}
+#farmer {
+
+}
+#tractor {
+
+}
+#haybale {
+
+}
+#plow {
+
+}
+#fence {
+	
+}
