add z-index to styles

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,41 +2,41 @@ body {
 	background-image: url(field-of-grass.jpg);
 }
 #barn{
-
+	z-index: ;
 }
 #cow {
-
+	z-index: ;
 }
 #pig {
-
+	z-index: ;
 }
 #chicken {
-
+	z-index: ;
 }
 #rooster {
-
+	z-index: ;
 }
 #goat {
-
+	z-index: ;
 }
 #sheep {
-
+	z-index: ;
 }
 #horse {
-
+	z-index: ;
 }
 #farmer {
-
+	z-index: ;
 }
 #tractor {
-
+	z-index: ;
 }
 #haybale {
-
+	z-index: ;
 }
 #plow {
-
+	z-index: ;
 }
 #fence {
-	
+	z-index: ;
 }
