--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ img {
 	left: -30px;
 }
 #cow {
-	z-index: ;
+	z-index: 3;
 	height: 80px;
 	width:80px;
 	top:400px;
@@ -47,7 +47,11 @@ img {
 	left: 500px;
 }
 #haybale {
-	z-index: ;
+	z-index: 2;
+	height: 20px;
+	width: 20px;
+	top: 460px;
+	left: 200px;
 }
 #plow {
 	z-index: ;
