--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,12 +39,18 @@ img {
 	z-index: ;
 }
 #sheep {
-	z-index: ;
+	z-index: 3;
+	left: 16px;
+	top: 420px;
+	height: 25px;
+	width: 25px; 
 }
 #horse {
 	z-index: 2;
-	bottom:100px;
+	bottom: 40px;
 	left:300px;
+	height: 250px;
+	width: 300px;
 }
 #farmer {
 	z-index: 5;
@@ -57,8 +63,8 @@ img {
 	z-index: ;
 	height: 35px;
 	width: 35px;
-	top: 420px;
-	left: 500px;
+	top: 430px;
+	left: 650px;
 }
 #haybale {
 	z-index: 2;
