--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,23 +20,24 @@ img {
 }
 #pig {
 	z-index: ;
+	right: 400px;
+	bottom:100px;
+	height:110px;
+	width:120px;
 }
 #chicken {
-	z-index: ;
 	height: 60px;
 	width: 60px;
 	top: 600px;
 	right: 200px; 
 }
 #rooster {
-	z-index: ;
 	width: 70px;
 	height: 70px;
 	bottom: 10px;
 	right: 75px;
 }
 #goat {
-	z-index: ;
 	right: 750px;
 	top: 450px;	
 	height: 10px;
@@ -64,7 +65,6 @@ img {
 	width: 180px;
 }
 #tractor {
-	z-index: ;
 	height: 35px;
 	width: 35px;
 	top: 430px;
@@ -107,4 +107,8 @@ img {
 	left: 680px;
 	height: 100px;
 	width: 200px;
+}
+#ufo {
+	top: 45px;
+	right:45px;
 }
